crates/rexx-parser/src/snapshots/rexx_parser__tests__parse_do_end.snap
---
source: crates/rexx-parser/src/lib.rs
expression: prog
---
Program {
    statements: [
        DoBlock(
            DoBlock {
                header: Command {
                    tokens: [
                        Token {
                            kind: Keyword(
                                Do,
                            ),
                            line: 1,
                            col: 1,
                        },
                    ],
                    span: Span {
                        start_line: 1,
                        start_col: 1,
                        end_line: 1,
                        end_col: 1,
                    },
                },
                body: [
                    Command(
                        Command {
                            tokens: [
                                Token {
                                    kind: Keyword(
                                        Say,
                                    ),
                                    line: 2,
                                    col: 3,
                                },
                                Token {
                                    kind: StringLit(
                                        "hi",
                                    ),
                                    line: 2,
                                    col: 7,
                                },
                            ],
                            span: Span {
                                start_line: 2,
                                start_col: 3,
                                end_line: 2,
                                end_col: 7,
                            },
                        },
                    ),
                ],
                footer_tokens: [
                    Token {
                        kind: Keyword(
                            End,
                        ),
                        line: 3,
                        col: 1,
                    },
                ],
                span: Span {
                    start_line: 1,
                    start_col: 1,
                    end_line: 3,
                    end_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start_line: 1,
        start_col: 1,
        end_line: 3,
        end_col: 1,
    },
}
